# ChangeLog for media-libs/faac
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/faac/ChangeLog,v 1.17 2004/09/15 19:20:47 eradicator Exp $

  15 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> faac-1.24.ebuild:
  Stable sparc.

  01 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> faac-1.24.ebuild:
  Stable amd64, x86.

  26 Jul 2004; Chris White <chriswhite@gentoo.org> faac-1.24.ebuild:
  Fixes circular blocks on mpeg4ip by removing faad2 deps (faad2 is not required
  as a runtime lib, or a build lib).

*faac-1.24 (10 Jul 2004)

  10 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> metadata.xml,
  +faac-1.24.ebuild:
  Version bump closes bug #55769.

  07 May 2004; Jeremy Huddleston <eradicator@gentoo.org> faac-1.23.5.ebuild:
  Stable x86.

  21 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> faac-1.23.5.ebuild,
  metadata.xml:
  IUSE added.

  09 Apr 2004; David Holm <dholm@gentoo.org> faac-1.23.5.ebuild:
  Added to ~ppc.

*faac-1.23.5 (07 Apr 2004)

  07 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> faac-1.23.1.ebuild,
  faac-1.23.5.ebuild:
  DEPEND fix.  Version bump to close bug #46855.

  04 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> faac-1.23.1.ebuild:
  Explicitly state which automake/autoconf version to use.  Closes bug #46761.

  06 Dec 2003; Heinrich Wendel <lanius@gentoo.org> faac-26102001-r1.ebuild,
  faac-26102001.ebuild:
  removed old version, they confuse portage ;)

*faac-1.23.1 (22 Nov 2003)

  22 Nov 2003; Olivier Crete <tester@gentoo.org> faac-1.23.1.ebuild,
  faac-26102001-r1.ebuild:
  Major version bump

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*faac-26102001-r1 (05 Nov 2002)

  05 Nov 2002; Nick Hadaway <raker@gentoo.org> faac-26102001-r1.ebuild,
  files/digest-faac-26102001-r1, files/libsndfile-1.0.diff :
  Updated ebuild to support the libsndfile-1.x series.  Only minor