@@ -1,10 +1,8 @@
-MD5 16bd661e85eafde6eae2a7267ba024f6 faac-1.24.ebuild 831
-MD5 373f516d51753d58a81f2d14ae6d2e57 faac-1.23.1.ebuild 852
-MD5 2815f4ed1cc6eaa610a0767de6fe9cf7 faac-1.23.5.ebuild 856
+MD5 18b147d4ef010d05c5744ea085cf318a faac-1.24.ebuild 830
+MD5 7b4c76035fb3cc32bf38bc5a77012936 faac-1.23.5.ebuild 855
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
-MD5 21ee680e2b4f99d007d38c2270aba3b2 ChangeLog 2479
+MD5 34feaaf98fc3cfb4310cd2b653224d87 ChangeLog 2600
 MD5 927d4973537500e758398d0dd1daae88 files/digest-faac-1.24 61
-MD5 59ffe97306f854b92ec801303951f646 files/digest-faac-1.23.1 63
 MD5 3c7304d2a11a89df8123f8c096d11725 files/digest-faac-1.23.5 63
 MD5 cdd79fb009d4c52796f1b1e31bf6ed20 files/fix-linefeeds.sh 122
 MD5 049efb5435eb21d0c652a01219932747 files/libsndfile-1.0.diff 1368
