@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/faac/faac-1.24.ebuild,v 1.4 2004/09/15 19:20:47 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/faac/faac-1.24.ebuild,v 1.5 2004/09/28 04:37:38 eradicator Exp $
 
 inherit libtool
 
@@ -8,7 +8,7 @@ IUSE=""
 
 S=${WORKDIR}/${PN}
 DESCRIPTION="Free MPEG-4 audio codecs by AudioCoding.com"
-HOMEPAGE="http://faac.sourceforge.net/"
+HOMEPAGE="http://www.audiocoding.com/"
 SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 
 SLOT="0"
