@@ -1,6 +1,6 @@
 MD5 beb07d2f56cc8c4fabdf21c7858b8d69 ChangeLog 1783
 MD5 6a34c213131a6d5c74b7272dd23b2a74 libdvdread-0.9.3.ebuild 675
-MD5 5414d11cece2bf824c8e251780f79146 libdvdread-0.9.4.ebuild 835
+MD5 9535dc54ecb019cb7188e9e5f2a1d0a3 libdvdread-0.9.4.ebuild 841
 MD5 9ef4af14dad87b03fde8e43f19e08d26 metadata.xml 225
 MD5 87ebfda5feddced62e82b6eadabfdc66 files/digest-libdvdread-0.9.3 68
 MD5 866bd13bcf653fdb278c774089e3e504 files/digest-libdvdread-0.9.4 68
