@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/faac
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/faac/ChangeLog,v 1.17 2004/09/15 19:20:47 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/faac/ChangeLog,v 1.18 2004/09/28 04:37:38 eradicator Exp $
+
+  27 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> -faac-1.23.1.ebuild:
+  Updated HOMEPAGE.  Removed old version.
 
   15 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> faac-1.24.ebuild:
   Stable sparc.
